--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,34 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:client1]
 platform = atmelavr
 board = uno
 framework = arduino
 upload_port = COM15
+build_flags =
+  -D CLIENT_NUMBER_1
+
+[env:client2]
+platform = atmelavr
+board = uno
+framework = arduino
+upload_port = COM14
+build_flags =
+    -D CLIENT_NUMBER_2
+
+[env:client3]
+platform = atmelavr
+board = uno
+framework = arduino
+upload_port = COM9
+build_flags =
+  -D CLIENT_NUMBER_3
+
+[env:client4]
+platform = atmelavr
+board = uno
+framework = arduino
+upload_port = COM6
+build_flags =
+    -D CLIENT_NUMBER_4
